--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>ABDULRASAQ AGBOLUAJE'S<br />
 						PORTFOLIO</h1>
-						<p>As a data analyst, I have been trained to extract insights from large data sets using statistical tecniques and machine learning algorithms. I have experience working with a variety of data types, including structured and unstructured data, and i am well-versed in using tools like SQL, Microsoft Excel, Pyhton, and Tableau to drive informed business decisions through insightful recommndations. My combined skills in data analysis and accounting make me a versatile and valuable asset for any organization looking to leverage data-driven insights to improve their financial performance. Whether it's analyzing sales trends, tracking expenses, or preparing budgets, i have the expertise to help organizations make the most of their financial data. </p>
+						<p>As a data analyst, I have been trained to extract insights from large data sets using statistical tecniques and machine learning algorithms. I have experience working with a variety of data types, including structured and unstructured data, and i am well-versed in using tools like SQL, Microsoft Excel, Pyhton, and Tableau to drive informed business decisions through insightful recommndations. My combined skills in data analysis and accounting makes me a versatile and valuable asset for any organization looking to leverage data-driven insights to improve their financial performance. Whether it's analyzing sales trends, tracking expenses, or preparing budgets, i have the expertise to help organizations make the most of their financial data. </p>
 						<ul class="actions">
 							<li><a href="http://linkedin.com/in/abdulrasaq-agboluaje-ab7296157" class="@Abdulrasaq Agboluaje">@Abdulrasaq Agboluaje</a></li>
 						</ul>
@@ -52,7 +52,7 @@
 								<header class="major">
 									<span class="date">March, 2023</span>
 									<h2><a href="#">EXPLORATORY<br />
-									DATA ANALYSIS WIT SQL AND TABLEAU</a></h2>
+									DATA ANALYSIS WITH SQL AND TABLEAU</a></h2>
 									<p>Coming Soon.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
