--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									DATA ANALYSIS WITH SQL AND TABLEAU</a></h2>
 									<p>Coming Soon.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTI7DiXv5ce2N0XDzMpfqTtBlm-Krnuf-bgpzCLHUqRaA&s" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">VIEW PROJECT</a></li>
 								</ul>
