--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									DATA ANALYSIS WITH SQL AND TABLEAU</a></h2>
 									<p>Coming Soon.</p>
 								</header>
-								<a href="#" class="image fit"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTI7DiXv5ce2N0XDzMpfqTtBlm-Krnuf-bgpzCLHUqRaA&s" alt=" alt="" /></a>
+								<a href="#" class="image fit"><img src="https://media.istockphoto.com/id/1300476665/photo/high-angle-view-asian-chinese-womans-hand-on-mobile-app-for-online-food-delivery-during.jpg?s=612x612&w=0&k=20&c=4LkbammKgGvw3_xHYz_YZLdo_7zjeUCeDTC3pnGDUBE=" alt=" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">VIEW PROJECT</a></li>
 								</ul>
