--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
 									
 								</div>
 							</footer>
+<div class="sib-booking-calendar"
+    data-calendar-url="https://meet.sendinblue.com/dan-kost/more-information-or-assistance-on-zoo-net"
+    data-calendar-width="100%"
+    data-calendar-height="800px"
+    data-calendar-style="popup">
+</div>
+<script type="text/javascript" src="https://sibforms.com/forms/end-form/build/main.js"></script>
 
 					</div>
 
