--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<header class="major">
 									<span class="date">March, 2023</span>
 									<h2><a href="#">EXPLORATORY<br />
-									DATA ANALYSIS WITH SQL AND TABLEAU</a></h2>
-									<p>Coming Soon.</p>
+									DATA ANALYSIS WITH PYTHON</a></h2>
+									<p>This project involves the analysis of sales data from a superstore dataset to gain insights into the sales performance and identify trends and patterns in sales and profits. The dataset contains information about various aspects of the sales process, including order details, product categories, and sales metrics.</p>
 								</header>
 								<a href="#" class="image fit"><img src="https://media.istockphoto.com/id/1300476665/photo/high-angle-view-asian-chinese-womans-hand-on-mobile-app-for-online-food-delivery-during.jpg?s=612x612&w=0&k=20&c=4LkbammKgGvw3_xHYz_YZLdo_7zjeUCeDTC3pnGDUBE=" alt=" alt="" /></a>
 								<ul class="actions special">
