--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</header>
 								<a href="#" class="image fit"><img src="https://media.istockphoto.com/id/1300476665/photo/high-angle-view-asian-chinese-womans-hand-on-mobile-app-for-online-food-delivery-during.jpg?s=612x612&w=0&k=20&c=4LkbammKgGvw3_xHYz_YZLdo_7zjeUCeDTC3pnGDUBE=" alt=" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">VIEW PROJECT</a></li>
+									<li><a href="https://github.com/Razakgotiton/RskRasakiPortfolio/blob/main/Superstore%20Script.ipynb" class="button large">VIEW PROJECT</a></li>
 								</ul>
 							</article>
 
