--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									DATA ANALYSIS WITH PYTHON</a></h2>
 									<p>This project involves the analysis of sales data from a superstore dataset to gain insights into the sales performance and identify trends and patterns in sales and profits. The dataset contains information about various aspects of the sales process, including order details, product categories, and sales metrics.</p>
 								</header>
-								<a href="https://github.com/Razakgotiton/RskRasakiPortfolio/edit/main/index.html" class="image fit"><img src="https://media.istockphoto.com/id/1406885804/photo/a-shopping-cart-by-a-store-shelf-in-a-supermarket.jpg?s=612x612&w=0&k=20&c=mc80-Ok30xCZHgt02kGCqkDTvscCSV9nqKCMTlDqA9c=" alt=" alt="" /></a>
+								<a href="https://github.com/Razakgotiton/RskRasakiPortfolio" class="image fit"><img src="https://media.istockphoto.com/id/1406885804/photo/a-shopping-cart-by-a-store-shelf-in-a-supermarket.jpg?s=612x612&w=0&k=20&c=mc80-Ok30xCZHgt02kGCqkDTvscCSV9nqKCMTlDqA9c=" alt=" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Razakgotiton/RskRasakiPortfolio/blob/main/Superstore%20Script.ipynb" class="button large">VIEW PROJECT</a></li>
 								</ul>
