--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</header>
 								<a href="https://github.com/Razakgotiton/RskRasakiPortfolio" class="image fit"><img src="https://media.istockphoto.com/id/1406885804/photo/a-shopping-cart-by-a-store-shelf-in-a-supermarket.jpg?s=612x612&w=0&k=20&c=mc80-Ok30xCZHgt02kGCqkDTvscCSV9nqKCMTlDqA9c=" alt=" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Razakgotiton/RskRasakiPortfolio/blob/main/Superstore%20Script.ipynb" class="button large">VIEW PROJECT</a></li>
+									<li><a href="https://github.com/Razakgotiton/RskRasakiPortfolio" class="button large">VIEW PROJECT</a></li>
 								</ul>
 							</article>
 
