--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										<h2><a href="#">PREDICTIVE MODELLING<br />
 										WITH PYTHON</a></h2>
 									</header>
-									<a href="https://media.istockphoto.com/id/1437086785/photo/multi-color-leaves-in-neighbourhood-park-at-weston-road-and-major-mackenzie-dr-woodbridge.jpg?s=612x612&w=0&k=20&c=1t0OVT0dmjCVZQgnBBD6qLXpN9vBlhC92hL-dHKZTFQ=" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://github.com/Razakgotiton/Real-Estate-Analysis" class="image fit"><img src="https://media.istockphoto.com/id/1437086785/photo/multi-color-leaves-in-neighbourhood-park-at-weston-road-and-major-mackenzie-dr-woodbridge.jpg?s=612x612&w=0&k=20&c=1t0OVT0dmjCVZQgnBBD6qLXpN9vBlhC92hL-dHKZTFQ=" alt="" /></a>
 									<p>Coming Soon.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">VIEW PROJECT</a></li>
