--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ The goal of this project is to leverage the dataset to gain insights into the re
 									<a href="https://github.com/Razakgotiton/Real-Estate-Analysis" class="image fit"><img src="https://media.istockphoto.com/id/1437086785/photo/multi-color-leaves-in-neighbourhood-park-at-weston-road-and-major-mackenzie-dr-woodbridge.jpg?s=612x612&w=0&k=20&c=1t0OVT0dmjCVZQgnBBD6qLXpN9vBlhC92hL-dHKZTFQ=" alt="" /></a>
 									<p>Coming Soon.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/Razakgotiton/Real-Estate-Analysis" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
