--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 										<h2><a href="#">CUSTOMER SEGMENTATION<br />
 										WITH TABLEAU</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://github.com/Razakgotiton/RskRasakiPortfolio/blob/Razakgotiton-patch-1/Dashboard%201%20(1).png?raw=true" alt="" /></a>
 									<p>Coming Soon.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://public.tableau.com/app/profile/abdulrasaq.agboluaje/viz/EcommerceCustomerChurn/Dashboard1" class="button">VIEW DASHBOARD</a></li>
 									</ul>
 								</article>
 								<article>
