--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<header>
 										<span class="date">MARCH, 2023</span>
 										<h2><a href="#">CUSTOMER SEGMENTATION<br />
-										WITH TABLEAU</a></h2>
+										WITH TABLEAU</a></h2> This project is focused on analyzing customer churn in the e-commerce industry. Using advanced data analysis techniques and Tableau for visualization, I explored a comprehensive dataset to uncover key factors driving customer churn and develop actionable insights to improve customer retention.
 									</header>
 									<a href="#" class="image fit"><img src="https://github.com/Razakgotiton/RskRasakiPortfolio/blob/Razakgotiton-patch-1/Dashboard%201%20(1).png?raw=true" alt="" /></a>
 									<p>Coming Soon.</p>
