--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@ The goal of this project is to leverage the dataset to gain insights into the re
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(808) 811-9236</a></p>
+								<p><a href="(808) 811-9236">(808) 811-9236</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">Dolapoagboluaje71@gmail.com</a></p>
+								<p><a href="Dolapoagboluaje71@gmail.com">Dolapoagboluaje71@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
