--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ The goal of this project is to leverage the dataset to gain insights into the re
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">Dolapoagboluaje71@gmail.com</a></p>
+								<p><a href="mailto:Dolapoagboluaje71@gmail.com">Dolapoagboluaje71@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
