--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ The goal of this project is to leverage the dataset to gain insights into the re
 									<header>
 										<span class="date">April 18, 2023</span>
 										<h2><a href="#">EDA<br />
-										WITH POWER BI</a></h2>
+										WITH </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Coming Soon.</p>
