--- a/index.html
+++ b/index.html
@@ -92,13 +92,14 @@ The goal of this project is to leverage the dataset to gain insights into the re
 								<article>
 									<header>
 										<span class="date">April 18, 2023</span>
-										<h2><a href="#">EDA<br />
-										WITH </a></h2>
+										<h2><a href="#">Exploratory Data Analysis<br />
+										WITH Python </a></h2> The objective of this project was to analyze the data from the food aggregator company and gain insights into customer preferences, restaurant demand, food preparation and delivery times, cost analysis, and customer retention. By delving into the dataset, I aimed to extract meaningful information that could drive strategic decision-making for the company.
+
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Coming Soon.</p>
+									<a href="#" class="image fit"><img src="https://media.istockphoto.com/id/1421456329/photo/man-rating-his-experience-on-the-app-after-ordering-food-to-his-house.jpg?s=612x612&w=0&k=20&c=4rc-isypRIdfbpJRq5P8DXbaW_vwxemtQ44Y7jYdg-4=" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/Razakgotiton/Food-Aggregator-Analysis" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								<article>
