--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 								<article>
 									<header>
 										<span class="date">MARCH, 2023</span>
-										<h2><a href="#">CUSTOMER SEGMENTATION<br />
+										<h2><a href="#">Dashboard Creation<br />
 										WITH TABLEAU</a></h2> This project is focused on analyzing customer churn in the e-commerce industry. Using advanced data analysis techniques and Tableau for visualization, I explored a comprehensive dataset to uncover key factors driving customer churn and develop actionable insights to improve customer retention.
 									</header>
-									<a href="#" class="image fit"><img src="https://github.com/Razakgotiton/RskRasakiPortfolio/blob/Razakgotiton-patch-1/Dashboard%201%20(1).png?raw=true" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/abdulrasaq.agboluaje/viz/EcommerceCustomerChurn/Dashboard1" class="image fit"><img src="https://github.com/Razakgotiton/RskRasakiPortfolio/blob/Razakgotiton-patch-1/Dashboard%201%20(1).png?raw=true" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/abdulrasaq.agboluaje/viz/EcommerceCustomerChurn/Dashboard1" class="button">VIEW DASHBOARD</a></li>
